--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
+/.idea
+/.vscode
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -30,6 +32,10 @@
 !/tmp/storage/.keep
 
 /public/assets
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
