simplify replace generation header in simulation_job, update simulation show structure, update application to set italian as default locale, add bare minimum for controller translations

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 #
 default: &default
   adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
   timeout: 5000
 
 development:
@@ -24,4 +24,4 @@ production:
   <<: *default
   adapter: postgresql
   encoding: unicode
-  database: <%= ENV.fetch("DATABASE_URL") %>
+  database: <%= ENV.fetch('DATABASE_URL', 'localhost:5432') %>
